<?xml version="1.0"?>
<package>
  <name>ros_qt_controller</name>
  <version>0.0.1</version>
  <description>Simple Robot Controller.</description>
  <license>BSD</license>
  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
  <author email="allen286@purdue.edu">Hunter Allen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>